# Semantic-Segmentation-Cityscapes-Training-Finetuning

./: Fine_tuning_with_Weighted_CE_and_Augmentation.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: Fine_tuning_with_combined_CE_and DICE_Loss.ipynb  Model_Training_UNet_From_scratch.ipynb
